美化例子，修改aside,content等组件的参数使用

--- a/lib/layout/layout.example.scss
+++ b/lib/layout/layout.example.scss
@@ -18,3 +18,7 @@
 .z + .y, .y + .z, .z + .pui-layout {
   margin-left: 8px;
 }
+
+.example .pui-layout.pui-layout-hasAside {
+  flex-direction: row;
+}
