完成异步校验

--- a/example.scss
+++ b/example.scss
@@ -29,7 +29,7 @@ body {
     align-items: center;
     > img {margin-right: 8px;}
     > span {
-      color: $main-color;
+      color: #1a223e;
       font-size: 32px;
     }
   }
