--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -1,29 +1,63 @@
 @import "../helper.scss";
+
 .pui-button {
   padding: 4px 16px;
   line-height: 22px;
   transition: all 250ms;
   cursor: pointer;
   margin-right: 20px;
+  display: inline-flex;
+  align-items: center;
+
   &:focus {
     outline: none;
   }
+
   &-normal {
     color: #333;
     border: 1px solid lighten(#333, 50%);
     background: white;
+
     &:hover, &:focus {
       border-color: $main-color;
       color: $main-color;
     }
   }
+
   &-important {
     color: white;
     border: 1px solid $main-color;
     background: $main-color;
+
+
     &:hover, &:focus {
       background: lighten($main-color, 10%);
       border-color: lighten($main-color, 10%);
     }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    &.pui-button-loading {
+      background: lighten($main-color, 20%);
+      border-color: lighten($main-color, 20%);
+
+      .button-loading-icon {
+        height: 1.2em;
+        width: 1.2em;
+        margin-right: 3px;
+        animation: spin 2s infinite linear;
+      }
+    }
+
+
   }
+
+
 }
