修改页面的CSS，微调了一些地方的CSS

--- a/example.scss
+++ b/example.scss
@@ -1,64 +1,115 @@
-* {margin: 0;padding: 0; box-sizing: border-box;}
-*::before {box-sizing: border-box;}
-*::after {box-sizing: border-box;}
-ul, ol {list-style: none;}
-h1, h2, h3, h4, h5, h6 {font-weight: normal;}
-a { text-decoration: none; color: inherit; }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #2c3e50
+}
+
+*::before {
+  box-sizing: border-box;
+}
+
+*::after {
+  box-sizing: border-box;
+}
+
+ul, ol {
+  list-style: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 pre {
   font-family: "Fira Code Medium", Consolas, monospace;
 }
+
 $padding: 16px;
 $main-color: #00ADB5;
 $border-color: #eee;
 body {
   font-size: 16px;
 }
+
 .site-page {
   background: #ffffff;
   min-height: 100vh;
 }
+
 .site-main {
   padding-top: 16px;
+  padding-left: 50px;
+
+  .example {
+    max-width: 850px;
+
+    .description {
+      margin-bottom: 30px;
+    }
+  }
+
+  h1 {
+    padding-bottom: 30px;
+  }
 }
+
 .site-header {
   background: $border-color;
   padding: 8px 0;
+
   .logo {
     padding: 0 $padding;
     display: flex;
     align-items: center;
-    > img {margin-right: 8px;}
+
+    > img {
+      margin-right: 8px;
+    }
+
     > span {
       color: #1a223e;
       font-size: 32px;
     }
   }
 }
+
 .site-aside {
   border-right: 1px solid #EEEEEE;
   margin-right: 16px;
+
   h2 {
     padding: $padding;
     font-size: 18px;
   }
+
   ul {
     min-width: 12em;
+
     > li {
       a {
         color: #333;
         display: block;
         padding: 8px $padding;
+
         &:hover {
           color: $main-color;
         }
+
         &.active {
           color: white;
-          background: $main-color;
+          background: #1a223e;
         }
       }
     }
   }
 }
+
 .site-footer {
   text-align: center;
   font-size: 12px;
@@ -66,12 +117,41 @@ body {
   padding: 16px 0;
   border-top: 1px solid $border-color;
 }
+
 .example {
   padding: 16px 0;
 }
-.logo{
+
+.logo {
   .pui-icon {
     height: 45px;
     width: 45px;
+  }
+}
+
+.prism-code.language-jsx {
+  padding: 20px;
+  margin-top: 10px;
+  border-radius: 10px;
+  max-width: 850px;
+
+  .token.plain {
+    color:white;
+  }
+
+  .token.parameter {
+    color:#dcb62d;
+  }
+}
+
+.button-code {
+  margin-bottom: 30px;
+}
+
+.icon-demo {
+  .pui-icon {
+    width: 3em;
+    height: 3em;
+    margin-right: 20px;
   }
 }
